logs/qtornado.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyMySQL-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/PySocks-1.6.8.egg-info'...
Listing './lib/python3.5/site-packages/QmongoHelper'...
Listing './lib/python3.5/site-packages/Qtornado'...
Listing './lib/python3.5/site-packages/Qtornado/db'...
Listing './lib/python3.5/site-packages/Qtornado/res'...
Listing './lib/python3.5/site-packages/Qtornado/res/static'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/bootstrap'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/bootstrap/dist'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/bootstrap/dist/css'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/bootstrap/dist/js'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/bootstrap/grunt'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/bootstrap/js'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/bootstrap/less'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/bootstrap/less/mixins'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/css'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/images'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/jquery'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/jquery/dist'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/js'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/plugins'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/plugins/leaflet'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/plugins/leaflet/images'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/res'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/res/CN'...
Listing './lib/python3.5/site-packages/Qtornado/res/static/res/region'...
Listing './lib/python3.5/site-packages/Qtornado/res/ui_templates'...
Listing './lib/python3.5/site-packages/Qtornado-3.2.1.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/bs4-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/bson-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/motor'...
Listing './lib/python3.5/site-packages/motor/aiohttp'...
Listing './lib/python3.5/site-packages/motor/frameworks'...
Listing './lib/python3.5/site-packages/motor/frameworks/asyncio'...
Listing './lib/python3.5/site-packages/motor/frameworks/tornado'...
Listing './lib/python3.5/site-packages/motor-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/mroylib'...
Listing './lib/python3.5/site-packages/mroylib/science'...
Listing './lib/python3.5/site-packages/mroylib/services'...
Listing './lib/python3.5/site-packages/mroylib/services/remote'...
Listing './lib/python3.5/site-packages/mroylib_min-1.3.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pymysql'...
Listing './lib/python3.5/site-packages/pymysql/constants'...
Listing './lib/python3.5/site-packages/pymysql/tests'...
Listing './lib/python3.5/site-packages/pymysql/tests/thirdparty'...
Listing './lib/python3.5/site-packages/pymysql/tests/thirdparty/test_MySQLdb'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/qlib'...
Listing './lib/python3.5/site-packages/qlib/asyn'...
Listing './lib/python3.5/site-packages/qlib/base'...
Listing './lib/python3.5/site-packages/qlib/data'...
Listing './lib/python3.5/site-packages/qlib/file'...
Listing './lib/python3.5/site-packages/qlib/graphy'...
Listing './lib/python3.5/site-packages/qlib/io'...
Listing './lib/python3.5/site-packages/qlib/language'...
Listing './lib/python3.5/site-packages/qlib/log'...
Listing './lib/python3.5/site-packages/qlib/net'...
Listing './lib/python3.5/site-packages/qlib/science'...
Compiling './lib/python3.5/site-packages/qlib/science/compute.py'...
***   File "./lib/python3.5/site-packages/qlib/science/compute.py", line 2
    try
      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/qlib/searcher'...
Listing './lib/python3.5/site-packages/qlib/structure'...
Listing './lib/python3.5/site-packages/qlib/text'...
Listing './lib/python3.5/site-packages/qlib/viewer'...
Listing './lib/python3.5/site-packages/qmongohelper-0.1.egg-info'...
Listing './lib/python3.5/site-packages/redis'...
Listing './lib/python3.5/site-packages/redis-2.10.6.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/termcolor-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
